--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 anyio==4.0.0
 beautifulsoup4==4.12.2
+bs4==0.0.1
 certifi==2023.7.22
 charset-normalizer==3.3.0
 h11==0.14.0
@@ -7,7 +8,9 @@ httpcore==0.18.0
 httpx==0.25.0
 idna==3.4
 python-telegram-bot==20.6
+PyYAML==6.0.1
 requests==2.31.0
 sniffio==1.3.0
 soupsieve==2.5
+-e git+ssh://git@github.com/dann1/telepasta.git@7ce89970b4ad5c8d1aa8ea4243c9204bfb0a1394#egg=telepasta
 urllib3==2.0.7
